default/objects/Customer_Interaction__c/Customer_Interaction__c.object-meta.xml
<CustomObject>
    <description>Ability to track customer interactions</description>
    <label>Customer Interaction</label>
    <nameField>
        <label>Interaction Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Interaction</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>