default/objects/Customer_Interaction__c/fields/Actions_To_Be_Taken__c.field-meta.xml
<CustomField>
    <fullName>Actions_To_Be_Taken__c</fullName>
    <label>Actions To Be Taken</label>
    <type>TextArea</type>
</CustomField>