default/objects/Customer_Interaction__c/fields/Consultants_Met__c.field-meta.xml
<CustomField>
    <fullName>Consultants_Met__c</fullName>
    <label>Consultants Met</label>
    <length>50</length>
    <type>Text</type>
</CustomField>