default/objects/Customer_Interaction__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Customer_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>