default/objects/Customer_Interaction__c/fields/Discussion_Details_share_with_Management__c.field-meta.xml
<CustomField>
    <fullName>Discussion_Details_share_with_Management__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Discussion Details share with Management ?</inlineHelpText>
    <label>Discussion Details share with Management</label>
    <type>Checkbox</type>
</CustomField>