default/objects/Customer_Interaction__c/fields/DiscussionDetails__c.field-meta.xml
<CustomField>
    <fullName>DiscussionDetails__c</fullName>
    <label>Discussion Details</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>