default/objects/Customer_Interaction__c/fields/Machine_Planned_For_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Machine_Planned_For_Purchase__c</fullName>
    <label>Machine Planned For Purchase</label>
    <type>TextArea</type>
</CustomField>