default/objects/Customer_Interaction__c/fields/Outcome_Way_Forward__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Way_Forward__c</fullName>
    <label>Outcome/Way Forward</label>
    <type>TextArea</type>
</CustomField>