default/objects/Customer_Interaction__c/fields/Share_With_Management__c.field-meta.xml
<CustomField>
    <fullName>Share_With_Management__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Share With Management ?</label>
    <type>Checkbox</type>
</CustomField>