default/objects/Customer_Interaction__c/fields/Venue__c.field-meta.xml
<CustomField>
    <fullName>Venue__c</fullName>
    <label>Venue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>LCL Office</fullName>
            </value>
            <value>
                <fullName>Customer Site</fullName>
            </value>
            <value>
                <fullName>Cust. Site</fullName>
                <isActive>false</isActive>
                <label>Cust. Site</label>
            </value>
            <value>
                <fullName>LCL ofc</fullName>
                <isActive>false</isActive>
                <label>LCL ofc</label>
            </value>
            <value>
                <fullName>Others</fullName>
                <isActive>false</isActive>
                <label>Others</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>